# norlab_motion_models

./: .gitignore  LICENSE  README.md  pyproject.toml  straight_line_test.py
.venv-nmm/: pyvenv.cfg
.venv_nmm/: pyvenv.cfg
documentation/: design_choices.md
motion_model_vizualization/: IDD_2D_params.yaml  compute_possible_trajectories.py  idd_vizualizer.py
src/norlab_motion_models/: __init__.py  articulated_framed_steering_2D.py  ideal_diff_drive_2D.py  kinematic_motion_model_2D.py  motion_model.py  test.py
src/norlab_motion_models/motion_models/: __init__.py
src/norlab_motion_models/motion_models/kinematics/: __init__.py  articulated_framed_steering_2D.py  ideal_diff_drive.py  ideal_diff_drive_2D.py  kinematic_motion_model_2D.py
tests/tests_norlab_motion_models/tests_motion_models/tests_kinematics/: test_ideal_diff_drive.py
